syntax = "proto3";

option csharp_namespace = "FaasNet.StateMachine.WorkerHost";
import "google/protobuf/timestamp.proto";

service StateMachine {
	rpc Launch (StateMachineDef) returns (LaunchStateMachineDefResult);
	rpc Reactivate(ReactivateRequest) returns (ReactivateResult);
}

message StateMachineDef {
	string yaml = 1;
	string input = 2;
	string workflowDefTechnicalId = 3;
	string rootTopic = 4;
}

message ReactivateRequest {
	string id = 1;
}

message LaunchStateMachineDefResult {
	string id = 1;
	google.protobuf.Timestamp launchDateTime = 2;
}

message ReactivateResult{
	bool isSuccess = 1;
}